--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-modal-image": "^2.5.0",
     "react-redux": "^7.2.6",
     "react-select": "^5.2.2",
     "react-social-login": "^3.4.15",
