--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "lodash": "^4.17.21",
     "next": "^12.0.8",
     "react": "^17.0.2",
+    "react-avatar-edit": "^1.1.0",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
+    "react-filepond": "^7.1.1",
     "react-google-places-autocomplete": "^3.3.4",
     "react-icons": "^4.3.1",
-    "react-image-crop": "^10.0.0",
     "react-modal-image": "^2.5.0",
     "react-redux": "^7.2.6",
     "react-select": "^5.2.2",
