--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "bootstrap": "^5.1.3",
     "google-maps-react": "2.0.6",
     "lodash": "^4.17.21",
+    "moment": "^2.29.3",
     "next": "^12.0.8",
     "react": "^17.0.2",
     "react-avatar-edit": "^1.1.0",
     "react-bootstrap": "^2.1.1",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-filepond": "^7.1.1",
     "react-google-places-autocomplete": "^3.3.4",
