--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.2",
+    "@uppy/core": "^2.1.10",
+    "@uppy/image-editor": "^1.1.1",
+    "@uppy/react": "^2.1.2",
+    "@uppy/webcam": "^2.1.0",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "google-maps-react": "2.0.6",
