--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@uppy/webcam": "^2.1.0",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.8.3",
+    "firebase-admin": "^11.0.0",
     "google-maps-react": "2.0.6",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "next": "^12.0.8",
+    "nodemailer": "^6.7.5",
     "react": "^17.0.2",
     "react-avatar-edit": "^1.1.0",
     "react-bootstrap": "^2.1.1",
@@ -39,6 +42,7 @@
   },
   "devDependencies": {
     "@types/node": "17.0.12",
+    "@types/nodemailer": "^6.4.4",
     "@types/react": "17.0.38",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
