--- a/package.json
+++ b/package.json
@@ -17,11 +17,18 @@
     "bootstrap": "^5.1.3",
     "firebase": "^9.8.3",
     "firebase-admin": "^11.0.0",
+    "form-data": "^4.0.0",
+    "formidable": "^2.0.1",
+    "generate-password": "^1.7.0",
     "google-maps-react": "2.0.6",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
+    "multiparty": "^4.2.3",
     "next": "^12.0.8",
+    "next-connect": "^0.12.2",
     "nodemailer": "^6.7.5",
+    "parse-multipart": "^1.0.4",
+    "parse-multipart-data": "^1.3.0",
     "react": "^17.0.2",
     "react-avatar-edit": "^1.1.0",
     "react-bootstrap": "^2.1.1",
@@ -41,6 +48,7 @@
     "sass": "^1.49.0"
   },
   "devDependencies": {
+    "@types/multiparty": "^0.0.33",
     "@types/node": "17.0.12",
     "@types/nodemailer": "^6.4.4",
     "@types/react": "17.0.38",
