--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -- --port $PORT",
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.12.0",
     "@reduxjs/toolkit": "^1.7.2",
     "@uppy/core": "^2.1.10",
     "@uppy/image-editor": "^1.1.1",
@@ -20,7 +21,6 @@
     "form-data": "^4.0.0",
     "formidable": "^2.0.1",
     "generate-password": "^1.7.0",
-    "google-maps-react": "2.0.6",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "multiparty": "^4.2.3",
