--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "react-filepond": "^7.1.1",
     "react-google-places-autocomplete": "^3.3.4",
     "react-icons": "^4.3.1",
-    "react-modal-image": "^2.5.0",
+    "react-modal-image-responsive": "^1.1.1",
     "react-redux": "^7.2.6",
     "react-select": "^5.2.2",
     "react-sidebar": "^3.0.2",
