--- a/package.json
+++ b/package.json
@@ -55,5 +55,9 @@
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "typescript": "4.5.5"
+  },
+  "engines": {
+    "node": "16.14.2",
+    "npm": "8.5.5"
   }
 }
