--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,6 @@ phases:
             - "echo Entered the install phase..."
             - "npm install -g npm@latest"
             - "npm install --legacy-peer-deps"
-            # - "npm run build"
     pre_build:
         commands:
             - "echo Entered the prebuild phase..."
@@ -23,16 +22,16 @@ artifacts:
     files:
         - package.json
         - "build/**/*"
-        - config/**
-        - constants/**
-        - interfaces/**
-        - middleware/**
-        - pages/**
-        - public/**
-        - services/**
-        - store/**
-        - styles/**
-        - utils/**
-        - Axios.ts
-        - next.config.js
-        - tsconfig.json
+        # - config/**
+        # - constants/**
+        # - interfaces/**
+        # - middleware/**
+        # - pages/**
+        # - public/**
+        # - services/**
+        # - store/**
+        # - styles/**
+        # - utils/**
+        # - Axios.ts
+        # - next.config.js
+        # - tsconfig.json
