--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
     commands:
       - echo Installing dependency...
       - curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
-      - export NVM_DIR="$HOME/.nvm"
+      - export NVM_DIR="$HOME/.nvm" && \. "$NVM_DIR/nvm.sh"
       - npm install -g npm@latest
       - nvm install 16
       - nvm use 16
