--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,12 +4,13 @@ phases:
   install:
     commands:
       - echo Installing dependency...
-      - curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
-      - export NVM_DIR="$HOME/.nvm"
-      - '[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"'
-      - npm install -g npm@latest
-      - nvm install 16
-      - nvm use 16
+    #   - curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
+    #   - export NVM_DIR="$HOME/.nvm"
+    #   - '[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"'
+      - npm install -g npm@8.13.1
+      - npm install -g node@16.15.1
+    #   - nvm install 16
+    #   - nvm use 16
       - npm install -g yarn
       - npm install -g next
       - yarn
