--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,7 +8,7 @@ phases:
     #   - export NVM_DIR="$HOME/.nvm"
     #   - '[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"'
       - npm install -g npm@8.13.1
-      - npm install -g node@16.15.1
+      - npm install -g node@16.15.1 --force
     #   - nvm install 16
     #   - nvm use 16
       - npm install -g yarn
