--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,6 +16,7 @@ phases:
       - npm install -g node@16.15.1 --force
       # - nvm install 16
       # - nvm use 16
+      - npm install --save-dev typescript
       - npm install -g next
       - npm install --production --force      
   build:
