--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,13 +15,13 @@ phases:
       - npm install -g npm@8.13.1
       - npm install -g node@16.15.1 --force
       # - nvm install 16
-      # - nvm use 16
-      - npm install --save-dev typescript
+      # - nvm use 16      
       - npm install -g next
       - npm install --production --force      
   build:
     commands:
-      - echo Compiling the Node.js code      
+      - echo Compiling the Node.js code  
+      - yarn add --dev typescript    
       - npm run build
   post_build:
     commands:    
