--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.128.0",
+    "@aws-sdk/lib-storage": "^3.128.0",
     "@react-google-maps/api": "^2.12.0",
     "@reduxjs/toolkit": "^1.7.2",
     "@uppy/core": "^2.1.10",
@@ -16,6 +18,7 @@
     "@uppy/webcam": "^2.1.0",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
+    "dayjs": "^1.11.3",
     "firebase": "^9.8.3",
     "firebase-admin": "^11.0.0",
     "form-data": "^4.0.0",
