--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-tagsinput-2": "^3.19.8",
     "react-toastify": "^8.2.0",
     "redux": "^4.1.2",
-    "sass": "^1.49.0"
+    "sass": "^1.49.0",
+    "typesense": "^1.3.0"
   },
   "devDependencies": {
     "@types/multiparty": "^0.0.33",
